  tipfy.sessions.SecureCookieStore.

- NEW: Debugger is now part of tipfy core, without extra-dependencies.
  Previously the debugger was dependent on Jinja2, but now it uses the built-in
  template engine. The debugger is enabled directly in main.py as a normal
  WSGI middleware. See main.py in the project dir for a setup that also
  includes patching the dev server for better Jinja2 debugging.

- NEW: Sessions is now part of tipfy core. It is available in the request
  object and lazily loaded when accessed. Request has now 'session' and
  'session_store' attributes:

  - request.session is a shortcut to get a session using the configured
    backend and session key.
  - request.session_store provides session related utilities such as getting
    sessions from different backends and setting/deleting cookies.

  Examples::

      # Set a value in the current session.
      self.request.session['foo'] = 'bar'

      # Get a list of flash messages.
      flashes = self.request.session.get_flashes()

      # Add a flash message.
      self.request.session.add_flash('Hello, world!')

      # Get a session from a different backend.
      session = self.request.session_store.get_session(backend='memcache')

- NEW: Auth is now part of tipfy core. [explain]

- IMPROVED: redirect() (or self.redirect() in handlers) now accepts relative
  URLs. If a relative URL is passed, it'll be joined to the current request
  URL. THis is mostly useful to redirect to the result of url_for() without
  needing to build a full URL::

      # current URL is http://localhost/foo/bar

      # redirects to http://localhost/baz
      return redirect('/baz')

  ...but it also allows curious results for relative paths:

      # current URL is http://localhost/foo/bar

      # redirects to http://localhost/foo/baz
      return redirect('./baz')

      # redirects to http://localhost/baz
      return redirect('../baz')

- IMPROVED: url_for() has a few more keywords with special meanings, all